src/objects/loan__Credit_Pull_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Borrower_Info_Class__c</fullName>
        <description>This class is used to get borrower&apos;s information.</description>
        <inlineHelpText>This class is used to get borrower&apos;s information.</inlineHelpText>
        <label>Borrower Info Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__CRA_Account_Password__c</fullName>
        <inlineHelpText>This is the meridian link account&apos;s password which is required to fetch the credit report.</inlineHelpText>
        <label>CRA Account Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__CRA_Account_Username__c</fullName>
        <inlineHelpText>This is the meridian link account&apos;s user name which is required to fetch the credit report</inlineHelpText>
        <label>CRA Account Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Reporting_Agency__c</fullName>
        <inlineHelpText>This refers to businesses that maintain historical information pertaining to credit experience on individuals or businesses. The data is collected from credit card companies, banks and credit unions.</inlineHelpText>
        <label>Credit Reporting Agency</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Receiving_Party_ID__c</fullName>
        <inlineHelpText>This is a key assigned by Meridian Link to identify various Meridian Link Credit Reporting agencies</inlineHelpText>
        <label>Receiving Party ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Submitting_Party_ID__c</fullName>
        <inlineHelpText>This is a unique key assigned to the third party application by MeridianLink. This key has to be confidential. An error will be returned if this identifier is blank or does not match the values that CreditAPI has on record.</inlineHelpText>
        <label>Submitting Party ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Credit Pull Parameters</label>
</CustomObject>